tests/run/error_sig_mismatch.out
tests/run/error_sig_mismatch.em:4:1: error: a method's signature does not match the interface it implements
